--- a/ks1/config/dev.ks.deployment.yaml
+++ b/ks1/config/dev.ks.deployment.yaml
@@ -18,7 +18,7 @@ spec:
         run: ksweb
     spec:
       containers:
-      - image: kswebimage:latest
+      - image: ks:v1
         name: ksweb
         imagePullPolicy: IfNotPresent
         ports:
