--- a/ks1/config/service.yaml
+++ b/ks1/config/service.yaml
@@ -4,12 +4,12 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    app: ksweb
-  name: ksweb
+    app: ks1
+  name: ks1
 spec:
   ports:
   - name: http
     port: 80
     targetPort: 3000
   selector:
-    app: ksweb
+    app: ks1
