--- a/ks3/web/Dockerfile
+++ b/ks3/web/Dockerfile
@@ -6,6 +6,11 @@ WORKDIR /app
 
 EXPOSE 3000
 
-RUN yarn install
-RUN yarn
+RUN \
+    if [ -d node_modules ]; then \
+      rm -R node_modules; \
+    fi && \
+    yarn install && \
+    yarn
+
 CMD ["yarn", "start"]
