--- a/ks3/config/deployment.yaml
+++ b/ks3/config/deployment.yaml
@@ -34,6 +34,9 @@ spec:
         ports:
         - containerPort: 5000
 
+      imagePullSecrets:
+        - name: harbor-registry
+
       volumes:
       - name: frontend
         hostPath:
