trying to fix proxy url

--- a/ks3/config/ingress.yaml
+++ b/ks3/config/ingress.yaml
@@ -14,3 +14,7 @@ spec:
         backend:
           serviceName: ks3
           servicePort: http
+      - path: /api/hello
+        backend:
+          serviceName: ks3
+          servicePort: api
