--- a/ks3/config/service.yaml
+++ b/ks3/config/service.yaml
@@ -6,9 +6,13 @@ metadata:
     app: ks3
   name: ks3
 spec:
+  selector:
+    app: ks3
   ports:
   - name: http
     port: 80
     targetPort: 3000
-  selector:
-    app: ks3
+  - name: api
+    port: 8080
+    targetPort: 5000
+
