fix imagePullSecrets in yaml file minor fixes to yaml files

--- a/helm/ks1/deployment/ks1/templates/ingress.yaml
+++ b/helm/ks1/deployment/ks1/templates/ingress.yaml
@@ -30,6 +30,6 @@ spec:
         - path: {{ .Values.ingress.path }}
           backend:
             serviceName: {{ template "ks1.name" . }}
-            servicePort: {{ .Values.service.externalPort }}
+            servicePort: {{ .Values.service.portName }}
 {{- end }}
 
