fix for the value for the repository and image tag

--- a/helm/ks3/deployment/ks3/templates/deployment.yaml
+++ b/helm/ks3/deployment/ks3/templates/deployment.yaml
@@ -56,7 +56,7 @@ spec:
             value: "true"
 
       - name: "{{ .Chart.Name }}-{{ .Values.backend.name }}"
-        image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}"
+        image: "{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag }}"
         imagePullPolicy: {{ .Values.backend.image.pullPolicy }}
         command: ["python"]
         args: ["-m", "flask", "run"]
