--- a/helm/ks3/deployment/ks3/templates/deployment.yaml
+++ b/helm/ks3/deployment/ks3/templates/deployment.yaml
@@ -58,8 +58,7 @@ spec:
       - name: "{{ .Chart.Name }}-{{ .Values.backend.name }}"
         image: "{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag }}"
         imagePullPolicy: {{ .Values.backend.image.pullPolicy }}
-        command: ["python"]
-        args: ["-m", "flask", "run"]
+        args: ["server.py"]
         ports:
         - containerPort: {{ .Values.backend.service.internalPort }}
         livenessProbe:
@@ -67,13 +66,11 @@ spec:
             path: {{ .Values.backend.ingress.path }}
             port: {{ .Values.backend.service.internalPort }}
             scheme: {{ .Values.common.service.probesScheme }}
-{{ include "ks3.livenessProbeSettings" . | indent 10 }}
         readinessProbe:
           httpGet:
             path: {{ .Values.backend.ingress.path }}
             port: {{ .Values.backend.service.internalPort }}
             scheme: {{ .Values.common.service.probesScheme }}
-{{ include "ks3.readinessProbeSettings" . | indent 10 }}
 
       imagePullSecrets:
         - name: {{ .Values.common.image.pullSecrets }}
